Fix: Major issues resolved with container centering and page scroll overflow on the x-axis. Various components are now fit and centered to page.

--- a/components/feature/CharacterCard.module.css
+++ b/components/feature/CharacterCard.module.css
@@ -2,8 +2,7 @@
   width: 370px;
   height: 479px;
   background-color: #292e37;
-  margin-top: 20px;
-  margin-left: 16px;
+  margin: 30px 0 0 0;
   padding: 0;
 }
 
