--- a/components/feature/WeeklyCalendar.module.css
+++ b/components/feature/WeeklyCalendar.module.css
@@ -4,7 +4,7 @@
   -webkit-overflow-scrolling: touch;
   background: #393939;
   border-radius: 12px;
-  margin: 11px 0 0 16px;
+  margin: 0;
 }
 
 .calendarContainer {
