--- a/components/ui/PageHeaderComponent.module.css
+++ b/components/ui/PageHeaderComponent.module.css
@@ -1,7 +1,6 @@
 .settingHeader {
   display: flex;
   align-items: center;
-  text-align: center;
   width: 370px;
   height: 56px;
   position: relative;
