--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,11 @@ h4 {
   line-height: normal;
   margin: 0;
   flex: 3;
+}
+
+.settingHeader h4 {
   text-align: center;
+  padding-left: 16px;
 }
 
 .weeklyAchievement {
@@ -26,10 +30,9 @@ h3 {
   margin-left: 16px;
 }
 
-.sleep,
-.additional {
+.settingLabels {
   font-size: 20px;
-  font-style: normal;
+  font-style: bold;
   font-weight: 600;
   line-height: normal;
   margin-top: 30px;
@@ -113,6 +116,7 @@ input::placeholder {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  gap: 16px;
   padding: 0 20.5px 0 20.5px;
 }
 
@@ -122,7 +126,8 @@ input::placeholder {
 }
 
 .character {
-  margin: 10px 16px 0 16px;
+  margin: 0;
+  align-self: center;
 }
 
 .colorChipContainer {
@@ -130,6 +135,7 @@ input::placeholder {
   flex-direction: row;
   justify-content: space-between;
   padding: 0 16px 0 16px;
+  gap: 16px;
 }
 
 .colorTheme {
@@ -179,6 +185,7 @@ input::placeholder {
   background-color: #191b21;
   padding: 20px;
   overflow-y: auto;
+  overflow-x: hidden;
   padding-bottom: 100px;
   height: 100%;
   box-sizing: border-box;
